# OTUS_Homework_6

./: .travis.yml  CMakeLists.txt  description.json.in
include/: InfiniteMatrix2D.hpp
src/: main.cpp
tests/: MatrixTest.cpp
